# PerformanceCatcher

./: .gitignore  README.md  build.bat  build.dev.bat  build.release.bat  main.py  prod.py  pyproject.toml  record.json  test.py
.github/workflows/: python-publish.yml
src/perfcat/: PerfCat.py  __init__.py  __main__.py  app.py  asset.qrc  asset_rc.py  config.py  logger.py  settings.py  util.py
src/perfcat/assets/: asset.qrc  asset_rc.py
src/perfcat/assets/css/: __init__.py  default.css
src/perfcat/components/: layout.py  profiler.py
src/perfcat/components/monitors/: __init__.py  fps_monitor.py
src/perfcat/logger/: __init__.py
src/perfcat/module/: app.py
src/perfcat/modules/home/: ui_home.py
src/perfcat/modules/hot_plug/: win.py
src/perfcat/modules/profiler/: cpu.py  device.py  fps.py  profiler.py  temp.py  ui_profiler.py  ui_profiler.ui
src/perfcat/modules/reporter/: __init__.py
src/perfcat/modules/widgets/: ui_widgets.py  ui_widgets.ui  widgets.py
src/perfcat/pages/: __init__.py  android_profier.py  home.py
src/perfcat/pages/android_profiler/: __init__.py  android_profier.py  battery_monitor.py  cpu_monitor.py  device_info_card.py  fps_monitor.py  memery_monitor.py  profiler_setting_card.py  remote_connect_card.py  temperature_monitor.py  traffic_monitor.py
src/perfcat/pages/home/: home.py  ui_home.py  ui_home.ui
src/perfcat/services/: __init__.py  android_profiler_service.py  ios_profiler_service.py  record_service.py
src/perfcat/ui/: constant.py
src/perfcat/ui/layout/: util.py  (+4 more)
src/perfcat/utils/: __init__.py
tests/: test_perfcat.py
(+53 files in other folders)
