[tool.poetry]
name = "performancecatcher"
version = "2.0"
description = "Android performance toolkit"
authors = ["kaluluosi111 <kaluluosi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.9.1"
pyside6-stubs = "^6.7.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
