[tool.poetry]
name = "performance-catcher"
version = "2.0"
description = "Android performance toolkit"
authors = ["kaluluosi111 <kaluluosi@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{include="perfcat",from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
nicegui = "^2.20.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
